src/components/About/About.css
.about_box {
  display: flex;
  flex-direction: row;
  align-items: center;
  height: 45vh;
  min-height: 500px;
}
.about {
  flex-direction: column;
  margin-top: 3em;
}

.about_hi {
  font-size: 0.75em;
}

.about__name {
  color: var(--clr-primary);
}

.about__role {
  margin-top: 1rem;
}

.about__desc {
  font-size: 1rem;
  max-width: 600px;
}

.about__desc,
.about__contact {
  margin-top: 2.4em;
}

.about .link--icon {
  margin-right: 0.8em;
}

.about .btn--outline {
  margin-right: 1em;
}

.image {
  max-height: 450px;
  transform: scaleX(-1);
  /* border: 4px solid var(--clr-primary); */
  /* border-radius: 35% 50% 30% 50%;  */
}

@media (max-width: 640px) {
  .about_box {
    flex-direction: column;
  }
}

@media (max-width: 600px) {
  .app .about {
    align-items: flex-start;
    margin-top: 2em;
  }
}

